<resources>
    <string name="app_name">CoSign</string>
    <string name="cosign">CoSign</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="start_learning">Start Learning</string>
    <string name="button3">button1</string>
    <string name="button4">button2</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_statitics">Statistics</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_Profile">Profile</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
    <string name="CoSign">CoSign</string>
    <string name="title_Cosign">Cosign</string>
</resources>
