<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sg.edu.np.cosign.ui.home.HomeFragment"
        android:label="@string/title_Cosign"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="sg.edu.np.cosign.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="sg.edu.np.cosign.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="sg.edu.np.cosign.ui.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>